--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <!--
   <link rel="canonical" href="http://www.example.com/">
   -->
+  
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -59,7 +60,7 @@
 
   <script>
     /*if ('serviceWorker' in window.navigator) {
-      window.addEventListener('load', function() {
+      window.addEventListener('load', () => {
         window.navigator.serviceWorker.register('service-worker.js')
       });
     }*/
