service worker and firebase

--- a/app/index.html
+++ b/app/index.html
@@ -59,11 +59,11 @@
   </my-app>
 
   <script>
-    /*if ('serviceWorker' in window.navigator) {
+    if ('serviceWorker' in window.navigator) {
       window.addEventListener('load', () => {
         window.navigator.serviceWorker.register('service-worker.js')
       });
-    }*/
+    }
   </script>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
     <script>
