--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,6 @@
 
   <title>NEWS</title>
   
-  <script src="libs/idb.js"></script>
-  <script src="libs/purify.min.js"></script>
-  <script src="libs/webcomponents-lite.js"></script>
-  <script src="elements/my-app.js" defer></script>
-  
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
@@ -43,11 +38,22 @@
   <!--
   <link rel="canonical" href="http://www.example.com/">
   -->
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   
+  
+  <script src="libs/idb.js"></script>
+  <script src="libs/purify.min.js"></script>
+  <script src="libs/webcomponents-lite.js"></script>
+  <script src="libs/material-components-web.min.js"></script>
+  <script src="elements/my-app.js" defer></script>
+
+  <link rel="stylesheet" href="libs/material-components-web.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body class="mdc-typography">
   
   <my-app>
     <app-drawer></app-drawer>
@@ -57,6 +63,7 @@
       <section id="snackbar"></section>
     </section>
   </my-app>
+  
 
   <script>
     if ('serviceWorker' in window.navigator) {
@@ -65,6 +72,7 @@
       });
     }
   </script>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
