--- a/app/index.html
+++ b/app/index.html
@@ -40,15 +40,14 @@
   -->
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  
   
   <script src="libs/idb.js"></script>
   <script src="libs/purify.min.js"></script>
   <script src="libs/webcomponents-lite.js"></script>
   <script src="libs/material-components-web.min.js"></script>
   <script src="elements/my-app.js" defer></script>
-
+  
+  <link rel="stylesheet" href="libs/icon.css">
   <link rel="stylesheet" href="libs/material-components-web.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -64,8 +63,7 @@
     </section>
   </my-app>
   
-
-  <script>
+  <!--<script>
     if ('serviceWorker' in window.navigator) {
       window.addEventListener('load', () => {
         window.navigator.serviceWorker.register('service-worker.js')
@@ -81,6 +79,6 @@
 
     ga('create', 'UA-102517725-1', 'auto');
     ga('send', 'pageview');
-  </script>
+  </script>-->
 </body>
 </html>
