--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="PSK">
+  <meta name="application-name" content="News">
   <link rel="icon" sizes="192x192" href="images/touch/icon-192x192.png">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Starter Kit">
+  <meta name="apple-mobile-web-app-title" content="News">
   <link rel="apple-touch-icon" href="images/touch/icon-192x192.png">
 
   <!-- Tile for Win8 -->
