--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="msapplication-tap-highlight" content="no"> 
 
   <!-- Web Application Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- Chrome for Android theme color -->
   <meta name="theme-color" content="#2E3AA1">
